--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
     "socket.io": "^2.3.0"
   }
 }
